--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^3.1.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.4",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
